fixed issue that caused document to overflow horizontally

--- a/app/assets/stylesheets/private_pages.css
+++ b/app/assets/stylesheets/private_pages.css
@@ -1,3 +1,8 @@
+/* html::-webkit-scrollbar {
+	width: 0 !important;
+	-ms-overflow-style: none;
+} */
+
 .priv-header {
     height: 68px;
     z-index: 4;
@@ -281,7 +286,7 @@
     top: 0;
     height: 130px;
     overflow: hidden;
-    width: 100vw;
+    width: 100%;
 }
 .genre-slider.active {
     height: 195px;
@@ -295,7 +300,7 @@
     transition: left 400ms ease-in-out;
 }
 .row-container {
-    width: 100vw;
+    width: 100%;
     margin: 0 0 55px;
     padding: 0 4vw;
     height: 130px;
